--- a/batch_processor_config.yaml
+++ b/batch_processor_config.yaml
@@ -1,4 +1,4 @@
-# all paths need to be specified relative to file run_1st_level_search
+# all paths need to be specified relative to file batch_processor
 
 # Logging
 log_to_file: True
@@ -8,9 +8,9 @@ add_timestamp_to_log_file: True
 
 # input directory of your intended CommonRoad scenarios
 # do NOT put a slash at the end
-input_path: scenarios/exercise
+input_path: ../commonroad-scenarios/scenarios
 # output directory for CommonRoad solution files
-output_path: solutions/figs/priority_queue_backend
+output_path: solutions/figs/commonroad-scenarios_priority-queue-backend
 # overwrite solution file if it already exists
 overwrite: True
 # timeout time for trajectory planner [s]
@@ -21,20 +21,20 @@ overwrite: True
 scenarios_to_run:
 #  - DEU_Muc-1_2_T-1
 #  - CHN_Sha-10_1_T-1
-#  - CHN_Sha-13_1_T-1
+  - CHN_Sha-13_1_T-1
 #  - USA_US101-13_1_T-1
 #  - USA_Lanker-1_2_T-15
-#  - USA_Lanker-2_18_T-1
-#  - DEU_Gar-3_2_T-1
-#  - USA_US101-13_1_T-1
-#  - DEU_Hhr-1_1
+  - USA_Lanker-2_18_T-1
+  - DEU_Gar-3_2_T-1
+  - USA_US101-13_1_T-1
+  - DEU_Hhr-1_1
 #  - USA_Lanker-1_12_T-1
-#  - USA_Lanker-1_4_T-1
+  - USA_Lanker-1_4_T-1
 #  - USA_Lanker-1_7_T-1
 #  - USA_Lanker-1_8_T-1
 #  - USA_Lanker-1_9_T-1
 #  - USA_Lanker-2_26_T-1
-#  - USA_Peach-1_1_T-1
+  - USA_Peach-1_1_T-1
 #  - USA_Peach-4_8_T-1
 
 scenarios_to_skip:
