--- a/batch_processor/batch_processor_config.yaml
+++ b/batch_processor/batch_processor_config.yaml
@@ -2,7 +2,7 @@
 
 # Logging
 log_to_file: True
-log_file_dir: solutions/logs
+log_file_dir: ../solutions/logs
 log_file_name: route_planner_result_with_priority_queue_backend_on_commonroad-scenarios
 add_timestamp_to_log_file: True
 
@@ -26,17 +26,17 @@ scenarios_to_run:
 #  - USA_US101-13_1_T-1
 #  - USA_Lanker-1_2_T-15
 #  - USA_Lanker-2_18_T-1
-#  - DEU_Gar-3_2_T-1
 #  - USA_US101-13_1_T-1
-#  - DEU_Hhr-1_1
-#  - USA_Lanker-1_12_T-1
-#  - USA_Lanker-1_4_T-1
-#  - USA_Lanker-1_7_T-1
-#  - USA_Lanker-1_8_T-1
-#  - USA_Lanker-1_9_T-1
-#  - USA_Lanker-2_26_T-1
-#  - USA_Peach-1_1_T-1
-#  - USA_Peach-4_8_T-1
+  #  - DEU_Hhr-1_1
+  #  - USA_Lanker-1_12_T-1
+  #  - USA_Lanker-1_4_T-1
+  #  - USA_Lanker-1_7_T-1
+  #  - USA_Lanker-1_8_T-1
+  #  - USA_Lanker-1_9_T-1
+  #  - USA_Lanker-2_26_T-1
+  #  - USA_Peach-4_8_T-1
+  - USA_Peach-1_1_T-1
+#  - DEU_Gar-3_2_T-1
 
 scenarios_to_skip:
 #  - DEU_Muc-29_1_T-1
