interesting ccosy cases added with plots

--- a/batch_processor/batch_processor_config.yaml
+++ b/batch_processor/batch_processor_config.yaml
@@ -3,14 +3,14 @@
 # Logging
 log_to_file: True
 log_file_dir: ../solutions/logs
-log_file_name: route_planner_result_with_priority_queue_backend_on_commonroad-scenarios
+log_file_name: new_ccosy
 add_timestamp_to_log_file: True
 
 # input directory of your intended CommonRoad scenarios
 # do NOT put a slash at the end
 input_path: ../commonroad-scenarios/scenarios
 # output directory for CommonRoad solution files
-output_path: ../solutions/figs/commonroad-scenarios_priority-queue-backend
+output_path: ../solutions/figs/new_ccosy_projection_domain
 # overwrite solution file if it already exists
 overwrite: True
 # timeout time for trajectory planner [s]
@@ -19,6 +19,19 @@ overwrite: True
 # the list of scenarios in form "- scenario_id"
 # if it is empty then run all scenarios
 scenarios_to_run:
+  - CHN_Cho-2_2_T-1
+  - CHN_Cho-2_3_T-1
+  - CHN_Cho-2_5_T-1
+  - CHN_Sha-14_1_T-1
+  - CHN_Sha-15_1_T-1
+  - CHN_Sha-15_3_T-1
+  - CHN_Sha-2_5_T-1
+#  - DEU_Gar-3_4_T-1
+#  - DEU_Muc-17_1_T-1
+#  - DEU_Muc-17_2_T-1
+#  - DEU_Muc-2_1_T-1
+#  - DEU_Muc-30_1_S-1
+
 #  - USA_US101-2_3_T-1
 #  - DEU_Muc-1_2_T-1
 #  - CHN_Sha-10_1_T-1
