--- a/batch_processor/batch_processor_config.yaml
+++ b/batch_processor/batch_processor_config.yaml
@@ -8,7 +8,7 @@ add_timestamp_to_log_file: True
 
 # input directory of your intended CommonRoad scenarios
 # do NOT put a slash at the end
-input_path: ../commonroad-scenarios/scenarios
+input_path: ../example/example_scenarios
 # output directory for CommonRoad solution files
 output_path: ../solutions/figs/new_ccosy_projection_domain
 # overwrite solution file if it already exists
@@ -19,13 +19,13 @@ overwrite: True
 # the list of scenarios in form "- scenario_id"
 # if it is empty then run all scenarios
 scenarios_to_run:
-  - CHN_Cho-2_2_T-1
-  - CHN_Cho-2_3_T-1
-  - CHN_Cho-2_5_T-1
-  - CHN_Sha-14_1_T-1
-  - CHN_Sha-15_1_T-1
-  - CHN_Sha-15_3_T-1
-  - CHN_Sha-2_5_T-1
+#  - CHN_Cho-2_2_T-1
+#  - CHN_Cho-2_3_T-1
+#  - CHN_Cho-2_5_T-1
+#  - CHN_Sha-14_1_T-1
+#  - CHN_Sha-15_1_T-1
+#  - CHN_Sha-15_3_T-1
+#  - CHN_Sha-2_5_T-1
 #  - DEU_Gar-3_4_T-1
 #  - DEU_Muc-17_1_T-1
 #  - DEU_Muc-17_2_T-1
@@ -48,7 +48,7 @@ scenarios_to_run:
   #  - USA_Lanker-1_9_T-1
   #  - USA_Lanker-2_26_T-1
   #  - USA_Peach-4_8_T-1
-  - USA_Peach-1_1_T-1
+#  - USA_Peach-1_1_T-1
 #  - DEU_Gar-3_2_T-1
 
 scenarios_to_skip:
