change folder structure and improve plotting

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ solutions/logs
 solutions/figs/new_ccosy_projection_domain/
 
 solutions/figs/new_improved_ccosy_projection_domain/
+
+outputs/logs/
