--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ solutions/figs/new_ccosy_projection_domain/
 solutions/figs/new_improved_ccosy_projection_domain/
 
 outputs/logs/
+
+tutorial/.ipynb_checkpoints/
