Add isort config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,8 @@ coverage = "^6.5.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+filter_files = true
+line_width = 88
