--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ shapely = ">=1.6.4.post2"
 matplotlib = ">=3.1.2"
 commonroad-drivability-checker = "^2023.1"
 cvxpy = "^1.4.1"
+cvxopt = "^1.3.2"
 
 
 [tool.poetry.group.tutorial]
