added test for goal reached for easy scenarios

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 .idea/
+.vscode/
 
 *.pyc
 
@@ -20,5 +21,6 @@ outputs/logs/
 tutorial/.ipynb_checkpoints/
 
 /tutorial/img/
+/img/
 
 /tutorial/commonroad_challenge_2023/
