--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,9 +51,16 @@ mkdocstrings-python = "^1.8.0"
 mkdocs-material = "^9.5.10"
 
 
+# map mapmatching
+[tool.poetry.group.mapmatching]
+optional = true
+
+[tool.poetry.group.mapmatching.dependencies]
+cvxpy = "^1.4.1"
+cvxopt = "^1.3.2"
+
 
 # Build and Sys
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
