added precommit hooks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,15 +39,31 @@ test_build_pages:
       - site
   needs: [ ]
 
+
 ####### Style ##########
+## linting
+pre_commit:
+  stage: style
+  before_script:
+    - pip install pre-commit
+  only:
+    - develop
+    - master
+    - release
+  script:
+    - pre-commit run --all-files --show-diff-on-failure
+
+
 flake8:
   stage: style
   needs: []
   image: python:3.10
   before_script: []
   cache: []
-  # Do not enforce style
-  allow_failure: true
+  only:
+    - develop
+    - master
+    - release
   script:
     - pip install flake8 flake8-todo
     - flake8 commonroad_route_planner
@@ -58,8 +74,10 @@ black:
   image: pyfound/black:22.6.0
   before_script: []
   cache: []
-  # Do not enforce code formatting
-  allow_failure: true
+  only:
+    - develop
+    - master
+    - release
   script:
     - black --check --verbose --diff --color commonroad_route_planner
 
