--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ flake8:
     - release
   script:
     - pip install flake8
-    - flake8 commonroad_route_planner/ --extend-ignore=E501,E203
+    - flake8 commonroad_route_planner/ --extend-ignore=E501,E203 --max-line-length=120
 
 black:
   stage: style
