--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "commonroad-route-planner"
-version = "2024.1"
+version = "2024.1.1"
 description = "Route and reference path planning tool for CommonRoad scenarios"
 authors = ["Tobias Mascetta <commonroad@lists.lrz.de>"]
 license = "BSD"
@@ -25,7 +25,7 @@ networkx = ">=2.4"
 numpy = ">=1.17.4"
 shapely = ">=1.6.4.post2"
 matplotlib = ">=3.1.2"
-commonroad-drivability-checker = "^2023.1"
+commonroad-drivability-checker = ">=2023.1"
 
 # tutorial
 [tool.poetry.group.tutorial]
