--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ tutorial/.ipynb_checkpoints/
 
 /tutorial/img/
 /img/
-
+/tutorial/commonroad_challenge_2023.zip
 /tutorial/commonroad_challenge_2023/
 
 /site/
